# ipu_icx_network_toolkit

./: CODEOWNERS  E2E_Provisioning_One_liner.md  Flashing_cpld_bkm.md  Flashing_provider_configuration_bkm.md  Jenkinsfile  README.md  USB_Blaster_Postcode_Reading.md  copy_event.rar  makeTestcases.sh  plat_feature_config.py  requirements_py2.txt  requirements_py3.txt  setup.cfg  setup.py  testCases.xml  testCases_linux.xml  testCases_windows.xml  wht_tool_info.xml
automation_testcases/: [bkc]_gnr_bronze.ini  [multisocket]_bhs_simics.ini  accelerator_bhs.ini  accelerator_bhs_simics.ini  accelerator_egs.ini  all_aurora.ini  bkc_bhs.ini  bkc_ifwi_bmc_cpld_flashing.txt  bkc_linux_accelerator.txt  bkc_linux_dpdk.txt  bkc_linux_hqm.txt  bkc_linux_manageability.txt  bkc_linux_memory.txt  bkc_linux_memory_hbm.txt  bkc_linux_networking.txt  bkc_linux_ospl.txt  bkc_linux_pci.txt  bkc_linux_pm.txt  bkc_linux_processor.txt  bkc_linux_qat.txt  bkc_linux_ras.txt  bkc_linux_rdt.txt  bkc_linux_security_legacy.txt  bkc_linux_softsku.txt  bkc_linux_storage.txt  bkc_linux_stress.txt  bkc_linux_usb.txt  bkc_linux_virtualization.txt  bkc_seamless_linux_windows.txt  bkc_windows_manageability.txt  bkc_windows_memory.txt  bkc_windows_memory_hbm.txt  bkc_windows_networking.txt  bkc_windows_pci.txt  bkc_windows_pm.txt  bkc_windows_processor.txt  bkc_windows_ras.txt  bkc_windows_security_legacy.txt  bkc_windows_storage.txt  bkc_windows_stress.txt  (+117 more)
bkc_auto_installer_kit/: README.md  auto_installer_app.py  requirements.txt  system_configuration_2S_4S.xml  system_configuration_8S.xml  (+1 more)
(+4083 files in other folders)
