[tool:pytest]
norecursedirs = .git docs
addopts =
    -v
python_files =
    test/*
python_paths =
    src
flake8-ignore =
    *.py E123 E124 E126 E127 E128 E201 E202 E203 E211 E221 E222 E241 E251 E262 E265 E266 E305 E402 E501 W191 W291 W293 W391 F401 F811 F841 W605
    test/*.py ALL
markers=
    memory: test cases need to rely on memory
    ras: test cases need to rely on ras
    security: test cases need to rely on security

install_requires =

tests_require =

[options.packages.find]
where=src